[package]
name = "pallet-asset-registry"
version = "0.0.1"
description = "pallet for XCM Asset Registry."
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
staging-xcm = { workspace = true }
xcm-primitives = { path = "../primitives/xcm", default-features = false }

[dev-dependencies]
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }
pallet-xcm = { workspace = true }
parachains-common = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-runtime-parachains = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
staging-parachain-info = { workspace = true }
staging-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "cumulus-pallet-dmp-queue/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-core/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-assets/std",
    "pallet-balances/std",
    "pallet-xcm/std",
    "parachains-common/std",
    "parity-scale-codec/std",
    "polkadot-core-primitives/std",
    "polkadot-parachain-primitives/std",
    "polkadot-runtime-parachains/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "staging-parachain-info/std",
    "staging-xcm-builder/std",
    "staging-xcm-executor/std",
    "staging-xcm/std",
    "xcm-primitives/std",
    "sp-core/std",
    "sp-io/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "staging-xcm-builder/runtime-benchmarks",
    "cumulus-pallet-dmp-queue/runtime-benchmarks",
    "cumulus-pallet-xcmp-queue/runtime-benchmarks",
    "cumulus-primitives-core/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "parachains-common/runtime-benchmarks",
    "polkadot-parachain-primitives/runtime-benchmarks",
    "polkadot-runtime-parachains/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "staging-xcm-executor/runtime-benchmarks",
    "staging-xcm/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "cumulus-pallet-dmp-queue/try-runtime",
    "cumulus-pallet-xcmp-queue/try-runtime",
    "frame-system/try-runtime",
    "pallet-assets/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-xcm/try-runtime",
    "polkadot-runtime-parachains/try-runtime",
    "sp-runtime/try-runtime",
    "staging-parachain-info/try-runtime",
]
