[package]
name = "pallet-claims"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
libsecp256k1 = { version = "0.7.0", default-features = false, optional = true }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.171", default-features = false }
serde_derive = { version = "1.0.171", optional = true }

# substrate dependencies
frame-benchmarking = { optional = true, default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-std = { package = "sp-std", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

# local
claims-primitives = { package = "claims-primitives", path = "../primitives/claims", default-features = false }

[dev-dependencies]
hex-literal = "0.3.3"
libsecp256k1 = "0.7.0"
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-vesting = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
serde_json = { version = "1.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
no_std = []
std = [
    "claims-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "rustc-hex/std",
    "scale-info/std",
    "serde/std",
    "serde_derive",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "libsecp256k1/hmac",
    "libsecp256k1/static-context",
]

try-runtime = ["frame-support/try-runtime"]
