[package]
name = "pallet-claims"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
libsecp256k1 = { workspace = true, optional = true }
rustc-hex = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true, optional = true }

# substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# local
claims-primitives = { package = "claims-primitives", path = "../primitives/claims", default-features = false, features = ["serde_derive"] }

[dev-dependencies]
hex-literal = { workspace = true }
libsecp256k1 = { workspace = true }
pallet-balances = { workspace = true }
pallet-vesting = { workspace = true }
serde_json = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
no_std = []
std = [
    "claims-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "parity-scale-codec/std",
    "rustc-hex/std",
    "scale-info/std",
    "serde/std",
    "serde_derive",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "libsecp256k1/hmac",
    "libsecp256k1/static-context",
]

try-runtime = ["frame-support/try-runtime"]
