[package]
name = "pallet-enclave-bridge"
description = "The bridge between L1(integritee network) and L2(enclaves) for integritee blockchains and parachains"
version = "0.12.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "MS-RSL"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }

# local
enclave-bridge-primitives = { path = "../primitives/enclave-bridge", default-features = false }
pallet-teerex = { path = "../teerex", default-features = false }
teerex-primitives = { path = "../primitives/teerex", default-features = false }

# substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-timestamp = { workspace = true }

# benchmarking
frame-benchmarking = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
test-utils = { path = "../test-utils", optional = true }

[dev-dependencies]
env_logger = { workspace = true }
externalities = { workspace = true }
frame-benchmarking = { workspace = true, features = ["std"] }
hex-literal = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "enclave-bridge-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-teerex/std",
    "scale-info/std",
    "serde",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "teerex-primitives/std",
    "pallet-timestamp/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "hex-literal",
    "pallet-balances",
    "test-utils",
    "pallet-timestamp/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
